Now ignoring xcdebugger

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .DS_Store
 GoBoken.xcodeproj/project.xcworkspace/xcuserdata/conormanning.xcuserdatad/UserInterfaceState.xcuserstate
+GoBoken.xcodeproj/xcuserdata/conormanning.xcuserdatad/xcdebugger/
